--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "firebase": "^8.10.0",
+    "firebase-tools": "^9.18.0",
     "install": "^0.13.0",
     "moment": "^2.29.1",
     "npm": "^7.15.0",
